infra/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: frontend-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: frontend
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: frontend
    spec:
      containers:
      - image: amourycodes/blog-frontend
        name: frontend
        ports:
        - containerPort: 3000
        resources: {}
status: {}
