infra/posts-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: posts-service
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    run: posts
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: posts
  name: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      run: posts
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: posts
    spec:
      containers:
      - image: amourycodes/posts-service
        name: posts
        ports:
        - containerPort: 3001
        resources: {}
status: {}
