infra/users-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: users-service
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    run: users
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: users
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      run: users
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: users
    spec:
      containers:
      - image: amourycodes/users-service
        name: users
        ports:
        - containerPort: 3002
        resources: {}
status: {}
